Fixed menu spacing.

--- a/themes/wattleworks/assets/scss/basic.scss
+++ b/themes/wattleworks/assets/scss/basic.scss
@@ -69,6 +69,9 @@ header {
             border-left: 0.25rem solid var(--tone-line);
             border-right: 0.25rem solid var(--tone-line);
             list-style-type: none;
+            column-gap: 1rem;
+            display: flex;
+            justify-content: center;
             padding-left: 0;
 
             li {
@@ -76,13 +79,8 @@ header {
             }
 
             a {
-                padding: 0 0.25rem;
-
-                &:link,
-                &:visited {
-                    /* text-decoration: none; */
-                    display: inline-block;
-                }
+                display: inline-block;
+                padding: 0.25rem;
 
                 &:hover {
                     background: var(--tone-line);
