--- a/themes/wattleworks/assets/scss/media.scss
+++ b/themes/wattleworks/assets/scss/media.scss
@@ -2,6 +2,11 @@
     .desktop {
         display: none;
     }
+
+    header nav ul {
+        column-gap: 0;
+        justify-content: space-evenly;
+    }
 }
 
 @media only screen and (min-width: 501px) {
